k8/istio/virtual-service/address-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: address-vs
  namespace: default
spec:
  hosts:
    - "*"
  gateways:
    - ingress-gateway
  http:
    - match:
        - uri:
            prefix: /address-api/
      rewrite:
        uri: "/"
      route:
        - destination:
            host: address
            port:
              number: 9091
