k8/istio/virtual-service/user-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: user-vs
  namespace: default
spec:
  hosts:
    - "*"
  gateways:
    - ingress-gateway
  http:
    - match:
        - uri:
            prefix: /user-api/
      rewrite:
        uri: "/"
      route:
        - destination:
            host: user
            subset: v1
            port:
              number: 9090
          weight: 80
        - destination:
            host: user
            subset: v2
            port:
              number: 9090
          weight: 20
